mobile version id done

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </picture>
     
     </header>
-    <nav>
-      <div class="nav block">
+    <nav class="block">
+      <div class="nav">
         <div class="shearch_menu">
 
 
