filtr is done maybe

--- a/index.html
+++ b/index.html
@@ -33,19 +33,13 @@
           alt=""
         />
       </picture>
-    
     </header>
     <nav class="block">
       <div class="nav">
-        <div class="shearch_menu">
-
-
-        </div>
+        <div class="shearch_menu"></div>
         <div class="clear"><button class="clear_button">Clear</button></div>
       </div>
     </nav>
-    <main>
-        
-    </main>
+    <main></main>
   </body>
 </html>
